fix left sidebar on homepage (wrong display on screens bellow 760px height) add function to check size of uploaded image to the post, add fucntion to resize too big images

--- a/src/app/home/page.module.css
+++ b/src/app/home/page.module.css
@@ -16,7 +16,6 @@
   top: 10px;
   margin-top: 10px;
   height: 100vh;
-  margin-right: 40px;
 }
 .right_wing {
   display: flex;
