--- a/src/components/leftSideHomePage/Sidebar.module.css
+++ b/src/components/leftSideHomePage/Sidebar.module.css
@@ -1,17 +1,18 @@
+/* styles.module.css */
 .positionOfSidebar {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
 }
 
 .left_wing {
-  position: sticky;
-  top: 10px;
   display: flex;
-  flex: 3;
   flex-direction: column;
-  text-align: right;
-  align-items: flex-end;
-  height: 100vh;
+  justify-content: space-between;
+  height: 100%;
   margin-top: 5px;
+  min-width: 150px;
 }
 
 .image_container {
@@ -21,15 +22,16 @@
   height: auto;
   width: 225px;
 }
+
 .icons_container {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
-  align-items: flex-end;
+  align-items: flex-start;
   width: 210px;
   margin: 15px;
   transition: 1s ease-in-out;
 }
+
 .icons_container span {
   display: flex;
   margin-top: 20px;
@@ -38,6 +40,7 @@
   text-align: right;
   font-size: 23px;
 }
+
 .icons_container span p {
   margin: 0;
 }
@@ -53,6 +56,7 @@
   align-items: center;
   width: 60px;
 }
+
 .icons_container button {
   border-color: rgb(24, 129, 233);
   background-color: rgb(26, 132, 219);
@@ -89,7 +93,6 @@
 
 .user_info {
   font-size: 20px;
-  /* position: fixed; */
   margin-top: 80px;
   padding-left: 15px;
   bottom: 20px;
@@ -99,6 +102,8 @@
   justify-items: flex-end;
   align-items: center;
   align-self: flex-end;
+  margin-top: auto;
+  margin-right: 60px;
 }
 
 .button_logout {
@@ -118,6 +123,7 @@
   margin-top: 10px;
   transition: 0.3s ease-in-out;
 }
+
 .button_logout:hover {
   background-color: rgba(19, 20, 20, 0.452);
 }
@@ -201,3 +207,35 @@
     margin-left: 0px;
   }
 }
+/* 
+@media screen and (max-height: 770px) {
+  .positionOfSidebar {
+    height: auto;
+    overflow-y: auto;
+  }
+
+  .user_info {
+    font-size: 20px;
+    margin-top: 80px;
+    padding-left: 15px;
+    bottom: 20px;
+    height: 120px;
+  }
+
+  .user_info p {
+    font-weight: bold;
+    margin: 0px;
+    margin-right: 10px;
+  }
+
+  .user_info div {
+    display: flex;
+    align-items: center;
+  }
+
+  .user_info div span {
+    font-size: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+  }
+} */
